--- a/data/programas/app.html
+++ b/data/programas/app.html
@@ -29,7 +29,7 @@
 			<div class="row">
 				<div class="col-xs-12">
 					<div class="space"></div>
-					<form class="form-horizontal" name="form_clientes" id="form_clientes">
+					<form class="form-horizontal" name="form_programas" id="form_programas">
 						<div class="tabbable">
 							<ul class="nav nav-tabs padding-16">
 								<li class="active">
@@ -48,7 +48,7 @@
 											<div class="col-xs-12 col-sm-4 center">
 												<div>
 													<span class="profile-picture">
-														<img id="avatar" class="editable img-responsive" alt="" src="dist/avatars/profile-pic.jpg" />
+														<img id="avatar" class="editable img-responsive" alt="" src="dist/avatars/programas.jpg" />
 													</span>
 
 													<div class="space-4"></div>
@@ -82,7 +82,7 @@
 												<div class="form-group">
 													<label class="col-sm-4 control-label no-padding-right" for="nombre_programa">Nombre Programa:</label>
 													<div class="col-sm-4">
-														<input type="text" name="nombre_programa" id="nombre_programa" placeholder="Nombre Programa" value="" class="form-control" maxlength="13" />
+														<input type="text" name="nombre_programa" id="nombre_programa" placeholder="Nombre Programa" value="" class="form-control" onkeyup="this.value = this.value.toUpperCase();" />
 													</div>
 												</div>
 
@@ -151,7 +151,7 @@
       <div class="modal-content">
         <div class="modal-header">
           <button type="button" class="close" data-dismiss="modal" aria-hidden="true">&times;</button>
-          <h4 class="modal-title">BUSCAR CLIENTES</h4>
+          <h4 class="modal-title">BUSCAR PROGRAMAS</h4>
         </div>
         <div class="modal-body">
             <table id="table"></table>
