--- a/data/usuarios/app.html
+++ b/data/usuarios/app.html
@@ -177,25 +177,25 @@
 
 						<div class="clearfix form-actions">
 							<div class="col-md-offset-3 col-md-9">
-								<button class="btn btn-success" type="button" name="btn_0" id="btn_0">
+								<button type="button" class="btn btn-success" name="btn_0" id="btn_0" data-toggle='tooltip' title = 'Registrar usuario'>
 									<i class="ace-icon fa fa-save bigger-110"></i>
 									Guardar
 								</button>
 
 								&nbsp; &nbsp;
-								<button class="btn btn-success" type="button" name="btn_3" id="btn_3">
+								<button type="button" class="btn btn-success" name="btn_3" id="btn_3" data-toggle='tooltip' title = 'Modificar usuario'>
 									<i class="ace-icon fa fa-pencil-square-o bigger-110"></i>
 									Modificar
 								</button>
 
 								&nbsp; &nbsp;
-								<button class="btn btn-success" type="button" name="btn_2" id="btn_2" data-toggle="modal" href="#myModal">
+								<button type="button" class="btn btn-success" name="btn_2" id="btn_2" data-toggle='tooltip' title = 'Buscar usuario'>
 									<i class="ace-icon fa fa-search bigger-110"></i>
 									Buscar
 								</button>
 
 								&nbsp; &nbsp;
-								<button class="btn btn-success" type="button" name="btn_1" id="btn_1">
+								<button type="button" class="btn btn-success" name="btn_1" id="btn_1" data-toggle='tooltip' title = 'Limpiar'>
 									<i class="ace-icon fa fa-refresh bigger-110"></i>
 									Actualizar
 								</button>
@@ -220,7 +220,7 @@
 			<div id="pager"></div>
         </div>
         <div class="modal-footer">
-          <button type="button" class="btn btn-success" data-dismiss="modal">Cerrar</button>
+          <button type="button" class="btn btn-success" data-dismiss="modal" data-toggle="tooltip" title="Cerrar ventana">Cerrar</button>
         </div>
       </div>
     </div>
