--- a/data/usuarios/app.html
+++ b/data/usuarios/app.html
@@ -58,22 +58,22 @@
 												</div>
 
 												<div class="form-group">
-													<label class="control-label col-xs-12 col-sm-4 no-padding-right">Teléfono:</label>
+													<label class="control-label col-xs-12 col-sm-4 no-padding-right">Apellidos:</label>
 													<div class="col-xs-12 col-sm-6">
 														<div class="clearfix">
-															<span class="block input-icon">
-																<input type="text" name="telefono1" id="telefono1" placeholder="" class="form-control" />
-																<i class="ace-icon fa fa-phone"></i>
-												            </span>
+															<input type="text" name="apellidos" id="apellidos" placeholder="" class="form-control" onkeyup="this.value = this.value.toUpperCase();"/>
 														</div>
 													</div>
 												</div>
 
 												<div class="form-group">
-													<label class="control-label col-xs-12 col-sm-4 no-padding-right">Ciudad:</label>
+													<label class="control-label col-xs-12 col-sm-4 no-padding-right">Celular:</label>
 													<div class="col-xs-12 col-sm-6">
 														<div class="clearfix">
-															<input type="text" name="ciudad" id="ciudad" placeholder="" class="form-control" onkeyup="this.value = this.value.toUpperCase();"/>
+															<span class="block input-icon">
+																<input type="text" name="telefono2" id="telefono2" placeholder="" value="" class="form-control" />
+																<i class="ace-icon fa fa-mobile"></i>
+												            </span>
 														</div>
 													</div>
 												</div>
@@ -113,21 +113,21 @@
 
 											<div class="col-sm-6">
 												<div class="form-group">
-													<label class="control-label col-xs-12 col-sm-4 no-padding-right">Nombres Completos:</label>
+													<label class="control-label col-xs-12 col-sm-4 no-padding-right">Nombres:</label>
 													<div class="col-xs-12 col-sm-6">
 														<div class="clearfix">
-															<input type="text" name="nombres_completos" id="nombres_completos" placeholder="" class="form-control" onkeyup="this.value = this.value.toUpperCase();" />
+															<input type="text" name="nombres" id="nombres" placeholder="" class="form-control" onkeyup="this.value = this.value.toUpperCase();" />
 														</div>
 													</div>
 												</div>
 
 												<div class="form-group">
-													<label class="control-label col-xs-12 col-sm-4 no-padding-right">Celular:</label>
+													<label class="control-label col-xs-12 col-sm-4 no-padding-right">Teléfono:</label>
 													<div class="col-xs-12 col-sm-6">
 														<div class="clearfix">
 															<span class="block input-icon">
-																<input type="text" name="telefono2" id="telefono2" placeholder="" value="" class="form-control" />
-																<i class="ace-icon fa fa-mobile"></i>
+																<input type="text" name="telefono1" id="telefono1" placeholder="" class="form-control" />
+																<i class="ace-icon fa fa-phone"></i>
 												            </span>
 														</div>
 													</div>
@@ -156,15 +156,6 @@
 													<div class="col-xs-12 col-sm-6">
 														<div class="clearfix">
 															<input type="password" name="clave2" id="clave2" placeholder="" class="form-control" />
-														</div>
-													</div>
-												</div>
-
-												<div class="form-group">
-													<label class="control-label col-xs-12 col-sm-4 no-padding-right">Observaciones:</label>
-													<div class="col-xs-12 col-sm-6">
-														<div class="clearfix">
-															<textarea name="observaciones" id="observaciones" class="form-control"></textarea>
 														</div>
 													</div>
 												</div>
