--- a/data/perfiles/app.html
+++ b/data/perfiles/app.html
@@ -12,7 +12,7 @@
 				</li>
 
 				<li class="active">Generales</li>
-				<li class="active">Cargos</li>
+				<li class="active">Perfiles</li>
 			</ul><!-- /.breadcrumb -->
 
 			<div class="nav-search" id="nav-search">
